--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width">
-    <link rel="preload" href="fonts/.woff" as="font">
+    <link rel="preload" href="fonts/exo2.0-thin.woff" as="font">
+    <link rel="preload" href="fonts/exo2.0-thin.woff2" as="font">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
