--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,26 @@
   </head>
   <body>
 
+    <main class="content">
+      <h1 class="content__title">Ты сегодня покормил кота?</h1>
+      <ul class="content__catalog catalog">
+        <li class="catalog__item">
+          <p class="catalog__item-text">Сказочное заморское яство</p>
+          <h2 class="catalog__item-title">Нямушка</h2>
+          <h3 class="catalog__item-subtitle">с фуа-гра</h3>
+        </li>
+        <li class="catalog__item">
+          <p class="catalog__item-text">Сказочное заморское яство</p>
+          <h2 class="catalog__item-title">Нямушка</h2>
+          <h3 class="catalog__item-subtitle">с рыбой</h3>
+        </li>
+        <li class="catalog__item">
+          <p class="catalog__item-text">Сказочное заморское яство</p>
+          <h2 class="catalog__item-title">Нямушка</h2>
+          <h3 class="catalog__item-subtitle">с курой</h3>
+        </li>
+      </ul>
+    </main>
 
     <script src="js/main.js"></script>
   </body>
