--- a/source/index.html
+++ b/source/index.html
@@ -17,16 +17,19 @@
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с фуа-гра</h3>
+          <p class="catalog__item-weight" data-animal="fuagra">Чего сидишь? порадуй котэ, купи</p>
         </li>
         <li class="catalog__item">
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с рыбой</h3>
+          <p class="catalog__item-weight" data-animal="fish">Чего сидишь? порадуй котэ, купи</p>
         </li>
         <li class="catalog__item">
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с курой</h3>
+          <p class="catalog__item-weight" data-animal="checken">Чего сидишь? порадуй котэ, купи</p>
         </li>
       </ul>
     </main>
