Добавил изменение цвета

--- a/source/index.html
+++ b/source/index.html
@@ -17,19 +17,31 @@
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с фуа-гра</h3>
+          <div class="catalog__weight">
+            <div class="catalog__weight-quantity">0,5</div>
+            <div class="catalog__weight-unit">кг</div>
+          </div>
           <p class="catalog__item-weight" data-animal="fuagra">Чего сидишь? порадуй котэ, купи</p>
         </li>
         <li class="catalog__item">
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с рыбой</h3>
+          <div class="catalog__weight">
+            <div class="catalog__weight-quantity">2</div>
+            <div class="catalog__weight-unit">кг</div>
+          </div>
           <p class="catalog__item-weight" data-animal="fish">Чего сидишь? порадуй котэ, купи</p>
         </li>
         <li class="catalog__item">
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с курой</h3>
-          <p class="catalog__item-weight" data-animal="checken">Чего сидишь? порадуй котэ, купи</p>
+          <div class="catalog__weight">
+            <div class="catalog__weight-quantity">5</div>
+            <div class="catalog__weight-unit">кг</div>
+          </div>
+          <p class="catalog__item-weight" data-animal="chicken">Чего сидишь? порадуй котэ, купи</p>
         </li>
       </ul>
     </main>
