--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
             <div class="catalog__weight-quantity">0,5</div>
             <div class="catalog__weight-unit">кг</div>
           </div>
-          <p class="catalog__item-weight" data-animal="fuagra">Чего сидишь? порадуй котэ, купи</p>
+          <p class="catalog__item-weight" data-animal="fuagra">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
         </li>
         <li class="catalog__item">
           <p class="catalog__item-text">Сказочное заморское яство</p>
@@ -39,7 +39,7 @@
             <div class="catalog__weight-quantity">2</div>
             <div class="catalog__weight-unit">кг</div>
           </div>
-          <p class="catalog__item-weight" data-animal="fish">Чего сидишь? порадуй котэ, купи</p>
+          <p class="catalog__item-weight" data-animal="fish">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
         </li>
         <li class="catalog__item">
           <p class="catalog__item-text">Сказочное заморское яство</p>
@@ -54,7 +54,7 @@
             <div class="catalog__weight-quantity">5</div>
             <div class="catalog__weight-unit">кг</div>
           </div>
-          <p class="catalog__item-weight" data-animal="chicken">Чего сидишь? порадуй котэ, купи</p>
+          <p class="catalog__item-weight" data-animal="chicken">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
         </li>
       </ul>
     </main>
