Добавил цвета в константы

--- a/source/index.html
+++ b/source/index.html
@@ -27,6 +27,7 @@
           </div>
           <p class="catalog__item-weight" data-animal="fuagra">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
         </li>
+
         <li class="catalog__item">
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
@@ -41,22 +42,25 @@
           </div>
           <p class="catalog__item-weight" data-animal="fish">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
         </li>
+
         <li class="catalog__item">
-          <p class="catalog__item-text">Сказочное заморское яство</p>
-          <h2 class="catalog__item-title">Нямушка</h2>
-          <h3 class="catalog__item-subtitle">с курой</h3>
-          <ul class="catalog__list">
-            <li class="catalog__list-item">100 порций</li>
-            <li class="catalog__list-item">5 мышей в подарок</li>
-            <li class="catalog__list-item">Заказчик доволен</li>
-          </ul>
-          <div class="catalog__weight">
-            <div class="catalog__weight-quantity">5</div>
-            <div class="catalog__weight-unit">кг</div>
+          <div class="overlay">
+            <p class="catalog__item-text">Сказочное заморское яство</p>
+            <h2 class="catalog__item-title">Нямушка</h2>
+            <h3 class="catalog__item-subtitle">с курой</h3>
+            <ul class="catalog__list">
+              <li class="catalog__list-item">100 порций</li>
+              <li class="catalog__list-item">5 мышей в подарок</li>
+              <li class="catalog__list-item">Заказчик доволен</li>
+            </ul>
+            <div class="catalog__weight">
+              <div class="catalog__weight-quantity">5</div>
+              <div class="catalog__weight-unit">кг</div>
+            </div>
+            <p class="catalog__item-weight" data-animal="chicken">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
           </div>
-          <p class="catalog__item-weight" data-animal="chicken">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
-        </li>
-      </ul>
+          </li>
+        </ul>
     </main>
 
     <script src="js/main.js"></script>
