Добавил overlay и открытие по клику на ссылку

--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,7 @@
       <h1 class="content__title">Ты сегодня покормил кота?</h1>
       <ul class="content__catalog catalog">
         <li class="catalog__item">
+          <div class="overlay"></div>
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с фуа-гра</h3>
@@ -25,10 +26,11 @@
             <div class="catalog__weight-quantity">0,5</div>
             <div class="catalog__weight-unit">кг</div>
           </div>
-          <p class="catalog__item-weight" data-animal="fuagra">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
+          <p class="catalog__descript" data-animal="fuagra"></p>
         </li>
 
         <li class="catalog__item">
+          <div class="overlay"></div>
           <p class="catalog__item-text">Сказочное заморское яство</p>
           <h2 class="catalog__item-title">Нямушка</h2>
           <h3 class="catalog__item-subtitle">с рыбой</h3>
@@ -40,11 +42,11 @@
             <div class="catalog__weight-quantity">2</div>
             <div class="catalog__weight-unit">кг</div>
           </div>
-          <p class="catalog__item-weight" data-animal="fish">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
+          <p class="catalog__descript" data-animal="fish"></p>
         </li>
 
         <li class="catalog__item">
-          <div class="overlay">
+          <div class="overlay"></div>
             <p class="catalog__item-text">Сказочное заморское яство</p>
             <h2 class="catalog__item-title">Нямушка</h2>
             <h3 class="catalog__item-subtitle">с курой</h3>
@@ -57,8 +59,7 @@
               <div class="catalog__weight-quantity">5</div>
               <div class="catalog__weight-unit">кг</div>
             </div>
-            <p class="catalog__item-weight" data-animal="chicken">Чего сидишь? Порадуй котэ, <span class="catalog__item-buy">купи.</span></p>
-          </div>
+            <p class="catalog__descript" data-animal="chicken"></p>
           </li>
         </ul>
     </main>
