--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
             <div class="catalog__weight-quantity"></div>
             <div class="catalog__weight-unit"></div>
           </div>
-          <p class="catalog__descript" data-animal="chicken"></p>
+          <p class="catalog__descript"></p>
         </li>
     </template>
 
