Добавил getNodes и card.js

--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
         <div class="catalog__weight-unit">кг</div>
       </div>
       <p class="catalog__descript">
-        <span class=catalog__item-buy>купи</span>
+        <span class="catalog__item-buy">купи</span>
       </p>
     </li>
   </template>
