Заполнил и отрисовал карточки

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
       <div class="overlay"></div>
       <p class="catalog__item-text">Сказочное заморское яство</p>
       <h2 class="catalog__item-title"></h2>
-      <h3 class="catalog__item-subtitle"></h3>
+      <h3 class="catalog__item-type"></h3>
       <ul class="catalog__list">
         <li class="catalog__list-item"></li>
         <li class="catalog__list-item"></li>
