Добавил data атрибут для изменения состояний

--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
   </main>
 
   <template id="tmpl">
-    <li class="catalog__item">
+    <li class="catalog__item" data-state="1">
       <div class="overlay"></div>
       <p class="catalog__item-text">Сказочное заморское яство</p>
       <h2 class="catalog__item-title"></h2>
