--- a/source/index.html
+++ b/source/index.html
@@ -25,10 +25,8 @@
       <p class="catalog__item-text">Сказочное заморское яство</p>
       <h2 class="catalog__item-title"></h2>
       <h3 class="catalog__item-type"></h3>
-      <ul class="catalog__list">
-        <li class="catalog__list-item"></li>
-        <li class="catalog__list-item"></li>
-        <li class="catalog__list-item"></li>
+      <ul class="catalog__features">
+        <li class="catalog__feature"></li>
       </ul>
       <div class="catalog__weight">
         <div class="catalog__weight-quantity"></div>
