--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
   <template id="tmpl">
     <li class="catalog__item" data-state="1">
       <div class="overlay"></div>
-      <p class="catalog__item-text">Сказочное заморское яство</p>
+      <p class="catalog__item-text"></p>
       <h2 class="catalog__item-title"></h2>
       <h3 class="catalog__item-type"></h3>
       <ul class="catalog__features">
@@ -30,11 +30,11 @@
       </ul>
       <div class="catalog__weight">
         <div class="catalog__weight-quantity"></div>
-        <div class="catalog__weight-unit">кг</div>
+        <div class="catalog__weight-unit"></div>
       </div>
-      <p class="catalog__descript">
-        <span class="catalog__item-buy">купи</span>
-      </p>
+      <div class="catalog__description">
+        <span class="catalog__description-text"></span>
+      </в>
     </li>
   </template>
 
